--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a{
     color: inherit;
 }
 
-header{
+nav{
     display: flex;
     margin: 1rem;
     flex-direction: row;
@@ -25,14 +25,14 @@ header{
     align-content: center;
 }
 
-header ul{
+nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     list-style: none;
 }
 
-header ul li{
+nav ul li{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +42,7 @@ header ul li{
 }
 
 @media only screen and (max-width: 520px) {
-    header{
+    nav{
         display: flex;
         height: 8rem;
         margin: 1.4rem;
@@ -68,7 +68,7 @@ main{
     width: 50%;
     width: 458px;
     height: 414px;
-    margin-left: 3.5rem;
+    margin: 4%;
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
@@ -93,4 +93,15 @@ main h1{
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
     line-height: 28px;
+}
+
+@media only screen and (max-width: 1024px) {
+    .main-img{
+        display: block;
+        display: none;
+    }
+    .main-info-side{
+        width: 100%;
+        margin: 5%;
+    }
 }
