--- a/style.css
+++ b/style.css
@@ -1,230 +1,317 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&family=Roboto&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body::-webkit-scrollbar {
-    display: none;
-}
-
-body {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-nav {
-    display: flex;
-    margin: 1rem;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-}
-
-nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    list-style: none;
-}
-
-nav ul li {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    font-family: 'Raleway', sans-serif;
-}
-
-@media only screen and (max-width: 520px) {
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&family=Roboto&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body::-webkit-scrollbar {
+        display: none;
+    }
+    
+    body {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+    
     nav {
         display: flex;
-        height: 8rem;
-        margin: 1.4rem;
-        flex-direction: column;
+        margin: 1rem;
+        flex-direction: row;
         justify-content: space-between;
         align-content: center;
     }
-}
-
-
-/* -> MAIN  <- */
-
-main {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 3rem;
-    align-content: center;
-}
-
-.main-info-side {
-    display: flex;
-    width: 50%;
-    width: 458px;
-    height: 414px;
-    margin: 4%;
-    flex-direction: column;
-    justify-content: space-around;
-    text-align: center;
-    align-self: center;
-}
-
-main h1 {
-    font-family: 'Poppins', sans-serif;
-    color: #EC4424;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 69px;
-    line-height: 90px;
-}
-
-.main-subtitle {
-    font-family: 'Roboto', sans-serif;
-    font-size: 17px;
-    line-height: 33px;
-}
-
-.main-text {
-    font-family: 'Raleway', sans-serif;
-    font-size: 15px;
-    line-height: 28px;
-}
-
-@media only screen and (max-width: 1024px) {
-    .main-img {
-        display: block;
-        display: none;
+    
+    nav ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        list-style: none;
     }
+    
+    nav ul li {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        font-family: 'Raleway', sans-serif;
+    }
+    
+    nav ul li :hover {
+        font-size: 130%;
+    }
+    
+    @media only screen and (max-width: 520px) {
+        nav {
+            display: flex;
+            height: 8rem;
+            margin: 1.4rem;
+            flex-direction: column;
+            justify-content: space-between;
+            align-content: center;
+        }
+    }
+    /* -> MAIN  <- */
+    
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 3rem;
+        align-content: center;
+    }
+    
     .main-info-side {
+        display: flex;
+        width: 50%;
+        width: 458px;
+        height: 414px;
+        margin: 4%;
+        flex-direction: column;
+        justify-content: space-around;
+        text-align: center;
+        align-self: center;
+    }
+    
+    main h1 {
+        font-family: 'Poppins', sans-serif;
+        color: #EC4424;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 69px;
+        line-height: 90px;
+    }
+    
+    .main-subtitle {
+        font-family: 'Roboto', sans-serif;
+        font-size: 17px;
+        line-height: 33px;
+    }
+    
+    .main-text {
+        font-family: 'Raleway', sans-serif;
+        font-size: 15px;
+        line-height: 28px;
+    }
+    
+    @media only screen and (max-width: 1024px) {
+        .main-img {
+            display: block;
+            display: none;
+        }
+        .main-info-side {
+            width: 100%;
+            margin: 5%;
+        }
+    }
+    /* -> SECTION */
+    
+    section {
+        margin-top: 5rem;
+        margin-bottom: 5rem;
+    }
+    
+    section h2 {
+        font-family: 'Poppins', sans-serif;
+        color: #EC4424;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 2.3rem;
+        line-height: 3.2rem;
+        text-align: center;
+    }
+    
+    .section-subtitle {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.2rem;
+        line-height: 2rem;
+        text-align: center;
+        margin-bottom: 5rem;
+        margin-top: 2rem;
+    }
+    
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 0px 0px;
+        margin: 0;
+        padding: 0;
+        grid-template-areas: "pic1 service2 pic3 service4" "service1 pic2 service3 pic4";
+    }
+    
+    .pic1 {
+        grid-area: pic1;
+    }
+    
+    .service1 {
+        grid-area: service1;
+        display: block;
+        height: 100%;
         width: 100%;
-        margin: 5%;
+        background-color: #EC6348;
     }
-}
-
-
-/* -> SECTION */
-
-section {
-    margin-top: 5rem;
-    margin-bottom: 20rem;
-}
-
-section h2 {
-    font-family: 'Poppins', sans-serif;
-    color: #EC4424;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 2.3rem;
-    line-height: 3.2rem;
-    text-align: center;
-}
-
-section p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.2rem;
-    line-height: 2rem;
-    text-align: center;
-    margin-bottom: 5rem;
-    margin-top: 2rem;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 0px 0px;
-    margin: 0;
-    padding: 0;
-    grid-template-areas: "pic1 service2 pic3 service4" "service1 pic2 service3 pic4";
-}
-
-.pic1 {
-    grid-area: pic1;
-}
-
-.service1 {
-    grid-area: service1;
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #EC6348;
-}
-
-.pic2 {
-    grid-area: pic2;
-}
-
-.service2 {
-    grid-area: service2;
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #000000;
-}
-
-.pic3 {
-    grid-area: pic3;
-}
-
-.service3 {
-    grid-area: service3;
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #000000;
-}
-
-.pic4 {
-    grid-area: pic4;
-}
-
-.service4 {
-    grid-area: service4;
-    display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #EC4424;
-}
-
-.section-block {
-    height: 25vw;
-    width: 25vw;
-}
-
-@media only screen and (max-width: 341px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        gap: 0px 0px;
-        margin: 0;
-        padding: 0;
-        grid-template-areas: "service1" "pic1" "service2" "pic2" "service3" "pic3" "service4" "pic4";
+    
+    .pic2 {
+        grid-area: pic2;
     }
+    
+    .service2 {
+        grid-area: service2;
+        display: block;
+        height: 100%;
+        width: 100%;
+        background-color: #000000;
+    }
+    
+    .pic3 {
+        grid-area: pic3;
+    }
+    
+    .service3 {
+        grid-area: service3;
+        display: block;
+        height: 100%;
+        width: 100%;
+        background-color: #000000;
+    }
+    
+    .pic4 {
+        grid-area: pic4;
+    }
+    
+    .service4 {
+        grid-area: service4;
+        display: block;
+        height: 100%;
+        width: 100%;
+        background-color: #EC4424;
+    }
+    
     .section-block {
-        height: 100vw;
+        height: 25vw;
+        width: 25vw;
+        text-align: center;
     }
-}
-
-@media only screen and (min-width:342px) and (max-width: 760px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        gap: 0px 0px;
-        margin: 0;
-        padding: 0;
-        grid-template-areas: "service1 pic1" "pic2 service2" "service3 pic3" "pic4 service4";
+    
+    .section-block div {
+        display: flex;
+        margin-left: 10%;
+        margin-right: 10%;
+        height: 100%;
+        width: 80%;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
     }
-    .section-block {
-        height: 50vw;
-        width: 50vw;
+    
+    .service-title {
+        color: #FFFFFF;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 22px;
+        line-height: 31px;
     }
-}
+    
+    .service-subtitle {
+        color: #FFFFFF;
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 31px;
+    }
+    
+    @media only screen and (max-width: 341px) {
+        .grid-container {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            gap: 0px 0px;
+            margin: 0;
+            padding: 0;
+            grid-template-areas: "service1" "pic1" "service2" "pic2" "service3" "pic3" "service4" "pic4";
+        }
+        .section-block {
+            height: 100vw;
+        }
+    }
+    
+    @media only screen and (min-width:342px) and (max-width: 760px) {
+        .grid-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            gap: 0px 0px;
+            margin: 0;
+            padding: 0;
+            grid-template-areas: "service1 pic1" "pic2 service2" "service3 pic3" "pic4 service4";
+        }
+        .section-block {
+            height: 50vw;
+            width: 50vw;
+        }
+    }
+    /* -> Contato <- */
+    
+    .contact {
+        align-self: center;
+        background-color: #FBF4F4;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: 10rem;
+        height: 60vh;
+        width: 80vw;
+    }
+    
+    .contact h3 {
+        font-family: 'Poppins', sans-serif;
+        color: #EC4424;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 3rem;
+        margin: 2rem;
+    }
+    
+    .contact p {
+        font-family: "Raleway", "sans-serif";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    
+    .bottom {
+        margin-bottom: 3rem;
+    }
+    
+    @media only screen and (max-width:460px) {
+        .contact {
+            height: 80vh;
+        }
+        .contact h3 {
+            font-size: 2rem;
+        }
+        .contact p {
+            font-size: 1rem;
+        }
+    }
+    /* -> Footer <- */
+    
+    footer {
+        text-align: center;
+        margin-bottom: 2rem;
+        margin-top: 15rem;
+        font-family: monospace;
+    }
